# rock-band-3-deluxe

./: .dtacheckfns  .editorconfig  .gitattributes  .gitignore  TODO.txt  _build_ps3.bat  _build_ps3.sh  _build_wii.bat  _build_wii.sh  _build_wii_nopause.bat  _build_xbox.bat  _build_xbox.sh  _build_xenia.bat  _disable_animation.bat  _emissives.bat  _highways.bat  _init_repo.bat  _init_repo.sh  _run_xenia.bat  _spotlights.bat  _symlink_to_rpcs3.sh  _texture-process_emissives.bat  _texture-process_gems.bat  _texture-process_highways.bat  _texture-process_keyboards.bat  _texture-process_smashers.bat  _texture-process_spotlights.bat  a.txt  add_moggs.py  disable_keys.bat  disable_keys.py  enable_keys.bat  enable_keys.py  overshell.bat  overshell_dir.dta  readme.md  remove_moggs.py  todo-keys.txt  upgrades.dta
_ark/: ark.txt  dx_settings.dta  songs.dta
_rb2/: gem_smashers_drum_nomip.psd
_xenia/: xenia-canary.config.toml
dependencies/: Rock Band 3 Deluxe Play A Show.lnk  Rock Band 3 Deluxe Rich Presence.lnk  _disable_keys.bat  _texture-process_spotlights.bat  changelog.md  constantmotion.txt  disable_keys.bat  dx_discordrp.py  dx_play_a_show.py  dx_play_a_show_self_scan.py  enable_animation.py  enable_keys.bat  features.md  give_3dx_pro_strings.py  install_gitpython.bat  parse_dta.py  song_info.json  swap_dds_bytes.py  upgrades.json  wiiheader.tpl
dependencies/source_code/dtacheck/: Cargo.toml
dependencies/source_code/dtacheck/src/: main.rs
mids_rb4/: 21guns_update.mid  21stcentdigiboy_update.mid  25or6to4_update.mid  3am_update.mid  UGC_5000971_update.mid  (+528 more)
(+23633 files in other folders)
