[package]
name = "dtacheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
codespan-reporting = "0.11.1"
derive_more = "0.99.17"
logos = "0.13.0"

[profile.release]
opt-level = "z"
lto = true